# Oriana

./: .gitignore  README.md  changelog.txt  config.json  oriana.py  pyproject.toml  requirements.txt  splash.txt
api/: config_api.py  editor_api.py  git_api.py  terminal_api.py
kernel/: editor_core.py  global_var.py  jedi_engine.py
src/: __main__.py
src/_resources/: init_ccmd.py
src/api/: config_api.py  editor_api.py  plugin_api.py  terminal_api.py
src/kernel/: editor_core.py  global_var.py  make_config.py
src/oriana/: __main__.py
src/oriana/_resources/: ccmd_sample.py  init_ccmd.py
src/oriana/api/: config_api.py  editor_api.py  git_api.py  plugin_api.py  shelf_api.py
src/oriana/kernel/: editor_core.py  global_var.py  make_config.py  make_shelf.py  memory_operation.py
src/plugins/: sample.py
