[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oriana"
version = "2026.1.0"
dependencies = [
    "prompt_toolkit",
    "pygments",
    "jedi",
    "pyperclip",
    "gitpython"
]
requires-python = ">=3.10"
authors = [
  {name = "shinonome-MiDUki", email = "shiinaayame3@gmail.com"}
]
maintainers = [
  {name = "shinonome-MiDUki", email = "shiinaayame3@gmail.com"}
]
description = "Write Code Anywhere, Anytime, and move with Python."
readme = "README.md"
license = "MIT"
keywords = ["oriana", "editor", "python", "cli", "prompt_toolkit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers", 
  "Programming Language :: Python"
]

[project.urls]
Documentation = "https://github.com/shinonome-MiDUki/Oriana"
Repository = "https://github.com/shinonome-MiDUki/Oriana.git"
Changelog = "https://github.com/shinonome-MiDUki/Oriana/changelog.txt"

[project.scripts]
spam-cli = "spam:main_cli"

[project.gui-scripts]
oriana = "spam.__main__:main"
